--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -53,7 +53,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="JoinStringsWithSeparator\IEnumerableExtensions.cs" />
+    <Compile Include="ConvertHexStringToBytes\StringExtensions.cs" />
+    <Compile Include="ConvertHexStringToBytes\Tests.cs" />
+    <Compile Include="JoinStringsWithSeparator\IEnumerableTExtensions.cs" />
     <Compile Include="JoinStringsWithSeparator\Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
