--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -62,6 +62,8 @@
     <Compile Include="FindRangeGaps\Tests.cs" />
     <Compile Include="JoinStringsWithSeparator\IEnumerableTExtensions.cs" />
     <Compile Include="JoinStringsWithSeparator\Tests.cs" />
+    <Compile Include="ListsHaveSameContents\ICollectionTExtensions.cs" />
+    <Compile Include="ListsHaveSameContents\Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SkipLastElementInEnumerable\IEnumerableTExtensions.cs" />
     <Compile Include="SkipLastElementInEnumerable\Tests.cs" />
