--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -68,6 +68,7 @@
     <Compile Include="PrimeFactors\Numeric.cs" />
     <Compile Include="PrimeFactors\Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShuffleIEnumerable\IEnumerableExtensions.cs" />
     <Compile Include="SkipLastElementInEnumerable\IEnumerableTExtensions.cs" />
     <Compile Include="SkipLastElementInEnumerable\Tests.cs" />
     <Compile Include="SplitIEnumerableIntoSets\IEnumerableTExtensions.cs" />
