--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -61,6 +61,8 @@
     <Compile Include="FindRangeGaps\Range.cs" />
     <Compile Include="FindRangeGaps\RangeGapFinder.cs" />
     <Compile Include="FindRangeGaps\Tests.cs" />
+    <Compile Include="FindSmallestWindowContainingAllElements\Lists.cs" />
+    <Compile Include="FindSmallestWindowContainingAllElements\Tests.cs" />
     <Compile Include="JoinStringsWithSeparator\IEnumerableTExtensions.cs" />
     <Compile Include="JoinStringsWithSeparator\Tests.cs" />
     <Compile Include="ListsHaveSameContents\ICollectionTExtensions.cs" />
