--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -66,6 +66,9 @@
     <Compile Include="FindSmallestWindowContainingAllElements\Tests.cs" />
     <Compile Include="JoinStringsWithSeparator\IEnumerableTExtensions.cs" />
     <Compile Include="JoinStringsWithSeparator\Tests.cs" />
+    <Compile Include="ListPermutation\IListExtensions.cs" />
+    <Compile Include="ListPermutation\IListExtensionsTests.cs" />
+    <Compile Include="ListPermutation\Int32Extensions.cs" />
     <Compile Include="ListsHaveSameContents\ICollectionTExtensions.cs" />
     <Compile Include="ListsHaveSameContents\Tests.cs" />
     <Compile Include="PandigitalNumbers\Numeric.cs" />
