--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -69,9 +69,11 @@
     <Compile Include="Calculator\CalculatorTests.cs" />
     <Compile Include="Calculator\IStorageService.cs" />
     <Compile Include="CameraImagePath\Tests.cs" />
+    <Compile Include="Codegolf\Graycode\Tests.cs" />
     <Compile Include="ConvertHexStringToBytes\StringExtensions.cs" />
     <Compile Include="ConvertHexStringToBytes\Tests.cs" />
     <Compile Include="FastCurrentDateTime\SystemService.cs" />
+    <Compile Include="FileFtp\FtpTests.cs" />
     <Compile Include="FindOutOfOrderListItems\IEnumerableTExtensions.cs" />
     <Compile Include="FindOutOfOrderListItems\Tests.cs" />
     <Compile Include="FindRangeGaps\Range.cs" />
@@ -86,11 +88,13 @@
     <Compile Include="ListPermutation\Int32Extensions.cs" />
     <Compile Include="ListsHaveSameContents\ICollectionTExtensions.cs" />
     <Compile Include="ListsHaveSameContents\Tests.cs" />
+    <Compile Include="ManOrBoyCompiler\Tests.cs" />
     <Compile Include="PandigitalNumbers\Numeric.cs" />
     <Compile Include="PandigitalNumbers\Tests.cs" />
     <Compile Include="PrimeFactors\Numeric.cs" />
     <Compile Include="PrimeFactors\Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RangeEnumeration\Tests.cs" />
     <Compile Include="ShuffleIEnumerable\IEnumerableExtensions.cs" />
     <Compile Include="SkipLastElementInEnumerable\IEnumerableTExtensions.cs" />
     <Compile Include="SkipLastElementInEnumerable\Tests.cs" />
