--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -76,9 +76,9 @@
     <Compile Include="FileFtp\FtpTests.cs" />
     <Compile Include="FindOutOfOrderListItems\IEnumerableTExtensions.cs" />
     <Compile Include="FindOutOfOrderListItems\Tests.cs" />
-    <Compile Include="FindRangeGaps\Range.cs" />
-    <Compile Include="FindRangeGaps\RangeGapFinder.cs" />
-    <Compile Include="FindRangeGaps\Tests.cs" />
+    <Compile Include="Ranges\FindRangeGaps\Range.cs" />
+    <Compile Include="Ranges\FindRangeGaps\RangeGapFinder.cs" />
+    <Compile Include="Ranges\FindRangeGaps\Tests.cs" />
     <Compile Include="FindSmallestWindowContainingAllElements\Lists.cs" />
     <Compile Include="FindSmallestWindowContainingAllElements\Tests.cs" />
     <Compile Include="JoinStringsWithSeparator\IEnumerableTExtensions.cs" />
@@ -94,7 +94,8 @@
     <Compile Include="PrimeFactors\Numeric.cs" />
     <Compile Include="PrimeFactors\Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RangeEnumeration\Tests.cs" />
+    <Compile Include="Ranges\RangeEnumeration\Pair.cs" />
+    <Compile Include="Ranges\RangeEnumeration\Tests.cs" />
     <Compile Include="ShuffleIEnumerable\IEnumerableExtensions.cs" />
     <Compile Include="SkipLastElementInEnumerable\IEnumerableTExtensions.cs" />
     <Compile Include="SkipLastElementInEnumerable\Tests.cs" />
