--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -76,6 +76,7 @@
     <Compile Include="FileFtp\FtpTests.cs" />
     <Compile Include="FindOutOfOrderListItems\IEnumerableTExtensions.cs" />
     <Compile Include="FindOutOfOrderListItems\Tests.cs" />
+    <Compile Include="Ranges\CombineRanges\Tests.cs" />
     <Compile Include="Ranges\FindRangeGaps\Range.cs" />
     <Compile Include="Ranges\FindRangeGaps\RangeGapFinder.cs" />
     <Compile Include="Ranges\FindRangeGaps\Tests.cs" />
