--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -78,6 +78,7 @@
     <Compile Include="FindOutOfOrderListItems\Tests.cs" />
     <Compile Include="GeneticAlgorithm\GeneticSolver.cs" />
     <Compile Include="GeneticAlgorithm\Tests.cs" />
+    <Compile Include="LinqToListBehavior\Tests.cs" />
     <Compile Include="MaximizeCharacters\Tests.cs">
       <SubType>Code</SubType>
     </Compile>
