--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -82,6 +82,7 @@
     <Compile Include="MaximizeCharacters\Tests.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="PowersOf2\Tests.cs" />
     <Compile Include="PrimeNumbers\Numeric.cs" />
     <Compile Include="PrimeNumbers\Tests.cs" />
     <Compile Include="Ranges\ListToRanges\Tests.cs" />
