--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -79,6 +79,7 @@
     <Compile Include="GeneticAlgorithm\GeneticSolver.cs" />
     <Compile Include="GeneticAlgorithm\Tests.cs" />
     <Compile Include="LinqToListBehavior\Tests.cs" />
+    <Compile Include="ListPermutation\NumericTests.cs" />
     <Compile Include="MaximizeCharacters\Tests.cs">
       <SubType>Code</SubType>
     </Compile>
