--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -12,6 +12,8 @@
     <AssemblyName>Scratch</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,6 +57,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -78,6 +81,7 @@
     <Compile Include="FindOutOfOrderListItems\Tests.cs" />
     <Compile Include="GeneticAlgorithm\GeneticSolver.cs" />
     <Compile Include="GeneticAlgorithm\Tests.cs" />
+    <Compile Include="GeneticImageCopy\Tests.cs" />
     <Compile Include="LinqToListBehavior\Tests.cs" />
     <Compile Include="ListPermutation\NumericTests.cs" />
     <Compile Include="MaximizeCharacters\Tests.cs">
@@ -120,6 +124,9 @@
     <Compile Include="SumValuesOfTwoLists\Numeric.cs" />
     <Compile Include="SumValuesOfTwoLists\Tests.cs" />
     <Compile Include="SwitchStatementOptimization\Tests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="GeneticImageCopy\monalisa.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
