--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -6,14 +6,13 @@
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{BC65883D-91AD-49E3-878D-55888F5BCC1F}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Scratch</RootNamespace>
     <AssemblyName>Scratch</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <StartupObject>
-    </StartupObject>
+    <StartupObject>Scratch.GeneticImageCopy.Demo</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -79,8 +78,16 @@
     <Compile Include="FileFtp\FtpDemo.cs" />
     <Compile Include="FindOutOfOrderListItems\IEnumerableTExtensions.cs" />
     <Compile Include="FindOutOfOrderListItems\Tests.cs" />
+    <Compile Include="GeneticAlgorithm\GeneSequence.cs" />
+    <Compile Include="GeneticAlgorithm\Strategies\Crossover.cs" />
     <Compile Include="GeneticAlgorithm\GeneticSolver.cs" />
     <Compile Include="GeneticAlgorithm\Demo.cs" />
+    <Compile Include="GeneticAlgorithm\Strategies\IChildGenerationStrategy.cs" />
+    <Compile Include="GeneticAlgorithm\Strategies\Move.cs" />
+    <Compile Include="GeneticAlgorithm\Strategies\Mutation.cs" />
+    <Compile Include="GeneticAlgorithm\Strategies\RandomGenes.cs" />
+    <Compile Include="GeneticAlgorithm\Strategies\Splice.cs" />
+    <Compile Include="GeneticAlgorithm\Strategies\Swap.cs" />
     <Compile Include="GeneticImageCopy\Demo.cs" />
     <Compile Include="LinqToListBehavior\IEnumerableTExtensions.cs" />
     <Compile Include="LinqToListBehavior\Tests.cs" />
