--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -77,10 +77,12 @@
     <Compile Include="Codegolf\Graycode\Tests.cs" />
     <Compile Include="ConvertHexStringToBytes\StringExtensions.cs" />
     <Compile Include="ConvertHexStringToBytes\Tests.cs" />
+    <Compile Include="DirectoryParents\TExtensions.cs" />
     <Compile Include="FastCurrentDateTime\SystemService.cs" />
     <Compile Include="FileFtp\FtpDemo.cs" />
     <Compile Include="FindOutOfOrderListItems\IEnumerableTExtensions.cs" />
     <Compile Include="FindOutOfOrderListItems\Tests.cs" />
+    <Compile Include="DirectoryParents\Tests.cs" />
     <Compile Include="WhenDsl\IntExtensions.cs" />
     <Compile Include="WhenDsl\IntExtensionsTests.cs" />
     <Compile Include="WhenDsl\TExtensions.cs" />
