- genetic algorithm now expects a FitnessResult object with optional index hint for where improvement is needed, and unique key for matching different gene sequences that produce the same result - split gene modification strategies into those that affect single bytes and those that affect entire units of meaning - add Remove strategy - work around indexed image format incompatibility

--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -83,6 +83,7 @@
     <Compile Include="FindOutOfOrderListItems\IEnumerableTExtensions.cs" />
     <Compile Include="FindOutOfOrderListItems\Tests.cs" />
     <Compile Include="DirectoryParents\Tests.cs" />
+    <Compile Include="GeneticAlgorithm\Strategies\Remove.cs" />
     <Compile Include="ImageColors\Demo.cs" />
     <Compile Include="WhenDsl\IntExtensions.cs" />
     <Compile Include="WhenDsl\IntExtensionsTests.cs" />
