--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -13,6 +13,11 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <StartupObject>Scratch.GeneticImageCopy.Demo</StartupObject>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>3.5</OldToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -80,11 +85,13 @@
     <Compile Include="DirectoryParents\TExtensions.cs" />
     <Compile Include="FastCurrentDateTime\SystemService.cs" />
     <Compile Include="FileFtp\FtpDemo.cs" />
+    <Compile Include="FillGrid\Demo.cs" />
     <Compile Include="FindOutOfOrderListItems\IEnumerableTExtensions.cs" />
     <Compile Include="FindOutOfOrderListItems\Tests.cs" />
     <Compile Include="DirectoryParents\Tests.cs" />
     <Compile Include="GeneticAlgorithm\Strategies\Remove.cs" />
     <Compile Include="GeneticImageCopy\Rectangle.cs" />
+    <Compile Include="GroupBySequenceDirection\Tests.cs" />
     <Compile Include="ImageColors\Demo.cs" />
     <Compile Include="SequentialLinq\Tests.cs" />
     <Compile Include="WhenDsl\IntExtensions.cs" />
