split by break in sequence

--- a/src/Scratch/Scratch.csproj
+++ b/src/Scratch/Scratch.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Parse\CommaSeparatedList.cs" />
     <Compile Include="Parse\TabDelimitedSerialized.cs" />
     <Compile Include="Rectangle\Demo.cs" />
+    <Compile Include="SequentialLinq\SplitByBreakInSequence.cs" />
     <Compile Include="SequentialLinq\Tests.cs" />
     <Compile Include="Sorting\QuickSortWithInsertionSort\Class1.cs" />
     <Compile Include="StringContainsAll\Tests.cs" />
